crates/djls-semantic/tests/snapshots/corpus__repos__hyperkitty__hyperkitty__templatetags__decorate.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "hyperkitty.templatetags.decorate::filter::render":
    expects_arg: true
    arg_optional: false
block_specs: {}
